# MARS

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  LOBBY.md  NOTICE.md  PROTOCOL_REFACTORING_COMPLETE.md  README.md  SETUP.md  USER.md  conftest.py  opencode.jsonc  plan.md  pyproject.toml
.opencode/skills/dungeon-master/: SKILL.md
.opencode/skills/junior-programmer/: SKILL.md
.opencode/skills/mars-citizen/: SKILL.md
.opencode/skills/product-owner/: SKILL.md
examples/: README.md
examples/dungeon-master/: README.md
examples/scrum-team/: README.md
mars/: __init__.py  constants.py
mars/artifacts/: __init__.py  store.py
mars/cli/: __init__.py  ag_ui_client.py  client.py  commands.py  events.py  main.py  math_renderer.py  models.py  nav.py  renderer.py  service_manager.py  utils.py
mars/client/cli/: client.py  commands.py  main.py  math_renderer.py  models.py  renderer.py  service_manager.py  utils.py
mars/client/providers/: _openai_compat.py  anthropic.py  base.py  copilot.py  mock.py  ollama.py  registry.py
mars/common/: __init__.py  agent_record.py  constants.py  models.py  state.py  wire.py
mars/providers/: __init__.py  _openai_compat.py  anthropic.py  base.py  copilot.py  mock.py  ollama.py  registry.py
mars/runtime/agents/: agents.ini  clock_agent.py  file_agent.py  git_agent.py  launcher_agent.py  memory_agent.py  ollama_agent.py  profiler_agent.py  scheduler_agent.py  scipy_agent.py  session_agent.py  shell_agent.py  status_agent.py  sympy_agent.py  url_agent.py
mars/runtime/server/: main.py  mcp_adapter.py
mars/runtime/server/static/: index.html
mars/runtime/services/: llm_wire_agent.py  mcp_server.py  registry.py  service_utils.py
mars/scopes/: __init__.py  store.py
mars/server/: a2a_agent_card.py  a2a_message_builder.py  a2a_task_manager.py  audit.py  federation.py  main.py  payloads.py  rest.py  server.py  service_manager.py  ws.py
mars/server/agents/: agents.ini
mars/server/federation/: mars_protocol.py  node_registry.py
mars/server/federation/proto/: federation.proto
mars/server/protocols/: __init__.py  a2a.py  ag_ui.py  base.py  mars.py  mcp.py
mars/server/services/: __init__.py  base.py  llm_wire_agent.py  mcp_server.py  registry.py  service_adapter.py  service_utils.py
mars/server/services/a2a/: __init__.py  adapter.py  service.py
mars/server/services/builtin/: __init__.py  adapter.py  agent_service.py  cli_service.py  discovery.py  launcher.py  launcher_service.py  profiler.py  status.py  status_service.py
mars/server/services/llm/: __init__.py  _openai_compat.py  anthropic.py  base.py  copilot.py  mock.py  ollama.py  zai.py
mars/server/services/mcp/: __init__.py  adapter.py  builtin_server.py  discovery_server.py  service.py  (+3 more)
mars/services/: __init__.py  agents.ini  clock_agent.py  file_agent.py  launcher_agent.py  llm_wire_agent.py  math_agent.py  mcp_server.py  ollama_agent.py  profiler_agent.py  registry.py  scipy_agent.py  status_agent.py  url_agent.py
mars/srv/: main.py  mcp_adapter.py
mars/storage/artifacts/: artifact.py  store.py
mars/storage/scopes/: scope.py  store.py
mars/world/: __init__.py  server.py  world.py
tests/: conftest.py
tests/component/: conftest.py  test_smoke.py
tests/component/cli/: test_cli_command_dispatch.py
tests/component/common/: test_wire_roundtrip.py
tests/component/server/: test_mcp_adapter_external.py
tests/module/: conftest.py  test_mcp_adapter.py  test_providers.py  test_registry.py  test_scopes.py
tests/module/cli/: test_cli_commands_e2e.py
tests/module/client/: test_cli_commands_e2e.py
tests/module/server/: test_external_mcp_spawn.py
tests/module/world/: test_mcp_server.py
tests/snapshots/: render_conversations__empty.txt  render_conversations__one.txt  render_feed__empty.txt  render_feed__one_spawn_item.txt  render_group__basic.txt  render_sidebar__empty.txt  render_sidebar__single_agent_idle.txt  render_sidebar__two_peers.txt
tests/snapshots/html/: render_conversations__empty.html  render_conversations__one.html  render_feed__empty.html  render_feed__one_spawn_item.html  render_group__basic.html  render_sidebar__empty.html  render_sidebar__single_agent_idle.html  render_sidebar__two_peers.html
tests/system/: conftest.py  helpers.py  test_anthropic_wire_agent.py  test_cli_startup.py  test_cli_state_rendering.py  test_cli_visual.py  test_copilot_wire_agent.py  test_external_mcp_tool_call.py  test_filesystem_mcp_server.py  test_git_agent_system.py  test_github_mcp_server.py  test_hello_copilot_ollama.py  test_llm_wire_agent.py  test_mcp_tool_call.py  test_memory_agent_system.py  test_multi_provider.py  test_ollama_wire_agent.py  test_server_commands.py  test_shell_agent_system.py  test_spawn_via_mcp_tool.py
tests/test_protocols/: __init__.py  test_integration.py  test_protocol_adapters.py  test_wire_protocols.py
tests/unit/: conftest.py  test_anthropic_provider_ext.py  test_anthropic_thinking.py  test_artifact_store_observer.py  test_artifacts.py  test_cli_models.py  test_cli_service_manager.py  test_cli_utils.py  test_git_agent.py  test_memory_agent.py  test_provider_registry.py  test_renderer_visual.py  test_scheduler_agent.py  test_scope.py  test_scope_store.py  test_service_tool.py  test_session_agent.py  test_shell_agent.py  test_sidebar_agents.py  test_status_agent_unreachable.py  test_tui_scroll.py  test_ui_bugs.py
tests/unit/cli/: test_cli_commands.py  test_cli_utils.py  test_sidebar_agents.py
tests/unit/common/: test_cli_models.py  test_wire.py
tests/unit/server/: test_a2a_adapter.py  test_build_wire_agent_cmd.py  test_cli_service_manager.py  test_mcp_adapter.py
tests/unit/world/: test_session.py  test_world.py
(+63 files in other folders)
