[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mars"
version = "0.1.0"
description = "Multi-Agent Runtime System – run multiple LLM models in parallel and chat with them."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "openai>=1.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "rich>=13.0",
    "Pillow>=10.0",
    "sympy>=1.12",
    "scipy>=1.12",
    "numpy>=1.26",
    "anthropic>=0.25",
]

[project.scripts]
mars = "mars.client.cli.main:main"
mars-server = "mars.runtime.server.main:main"
mars-llm-wire-agent = "mars.runtime.services.llm_wire_agent:main"
mars-agent-clock = "mars.runtime.agents.clock_agent:main"
mars-agent-profiler = "mars.runtime.agents.profiler_agent:main"
mars-agent-status = "mars.runtime.agents.status_agent:main"
mars-agent-sympy = "mars.runtime.agents.sympy_agent:main"
mars-agent-scipy = "mars.runtime.agents.scipy_agent:main"
mars-agent-file = "mars.runtime.agents.file_agent:main"
mars-agent-url = "mars.runtime.agents.url_agent:main"
mars-agent-ollama = "mars.runtime.agents.ollama_agent:main"
mars-agent-launcher = "mars.runtime.agents.launcher_agent:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
all = [
    "mars[dev]",
]

[tool.setuptools.packages.find]
include = ["mars*"]

[tool.setuptools.package-data]
"mars.runtime.agents" = ["agents.ini"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Tests run in strict tier order: unit → component → module → system.
# -x stops at the first failure, so a broken unit tier prevents component
# tests from starting, a broken component tier prevents module tests, and so on.
testpaths = [
    "tests/unit",
    "tests/component",
    "tests/module",
    "tests/system",
]
markers = [
    "unit: isolated single-unit tests (no I/O, no network)",
    "component: cross-module wiring tests (no network, no subprocesses)",
    "module: full-feature in-process tests (loopback TCP allowed)",
    "system: full-stack tests with real processes or external APIs (slow)",
    "llm: tests that make real LLM provider calls (excluded from default run)",
]
addopts = "-x"
