[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mars"
version = "0.1.0"
description = "Multi-Agent Runtime System – run multiple LLM models in parallel and chat with them."
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "openai>=1.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13.0",
    "Pillow>=10.0",
    "anthropic>=0.25",
    "mcp>=1.0",
    "a2a-sdk>=1.0",
]

[project.scripts]
mars = "mars.cli.main:main"
mars-server = "mars.server.main:main"
mars-llm-wire-agent = "mars.server.services.llm_wire_agent:main"
mars-agent-status = "mars.server.agents.status_agent:main"
mars-agent-launcher = "mars.server.agents.launcher_agent:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
all = [
    "mars[dev]",
]
clipboard = ["pyperclip>=1.8"]
# Optional: pretty-printing of LaTeX math in the CLI chat renderer.
math = [
    "sympy>=1.12",
    "antlr4-python3-runtime>=4.11,<4.12",
]

[tool.setuptools.packages.find]
include = ["mars*"]

[tool.setuptools.package-data]
"mars.server.agents" = ["agents.ini"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Tests run in strict tier order: unit → component → module → system.
# -x stops at the first failure, so a broken unit tier prevents component
# tests from starting, a broken component tier prevents module tests, and so on.
testpaths = [
    "tests/unit",
    "tests/component",
    "tests/module",
    "tests/system",
]
markers = [
    "unit: isolated single-unit tests (no I/O, no network)",
    "component: cross-module wiring tests (no network, no subprocesses)",
    "module: full-feature in-process tests (loopback TCP allowed)",
    "system: full-stack tests with real processes or external APIs (slow)",
    "llm: tests that make real LLM provider calls (excluded from default run)",
    "slow: tests that spawn subprocesses or run long integration scenarios",
]
addopts = "-x -m 'not llm and not slow'"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "E501",   # line too long — handled by formatter if needed
]
