[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mars"
version = "0.1.0"
description = "Multi-Agent Runtime System — a multi-agent runtime expressed as a world where humans and AI agents meet as equal avatars and coordinate by talking."
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
mars-world = "mars.world.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["mars*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests/unit",
    "tests/module",
]
markers = [
    "unit: isolated single-unit tests (no I/O, no network)",
    "module: full-feature in-process tests (loopback/subprocess allowed)",
    "llm: tests that make real LLM provider calls (excluded from default run)",
    "slow: tests that spawn subprocesses or run long integration scenarios",
]
addopts = "-x -m 'not llm and not slow'"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "E501",   # line too long — handled by formatter if needed
]
